# genius_rs

./: .gitignore  Cargo.toml  output.json
src/: lib.rs  main.rs
