[package]
name = "genius-api"
version = "0.1.2"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.32"
reqwest = {version = "0.13.3", features=["json", "query"]}
serde = {version = "1.0.228", features=["derive"]}
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
